--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h2>Digital Clock modified</h2>
+    <h2>Digital Clock</h2>
     <div class="clock">
       <div>
         <span class="hour"> 00</span>
